<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

//Generated By PlantUML Command
class Species extends Model
{
    protected $fillable = [
        'name',
        'scientific_name',
        'habitat',
        'diet',
    ];

    public function animals()
    {
        return $this->hasMany('App\Models\Animal');
    }
}
