<?php 
use Illuminate\Support\Facades\Schema;

use Illuminate\Database\Schema\Blueprint;
use Illuminate\Database\Migrations\Migration;
//Generated By PlantUML Command
class CreateActivitys extends Migration{
	public function up(){ 
 		Schema::create('activitys', function (Blueprint $table) { 
			$table->bigIncrements('id');
			$table->string('day');
			$table->string('time');
			$table->integer('duration');
			$table->string('description');
			$table->timestamps();
		});
 	} 
	public function down(){
 
	} 
}