<?php
use Illuminate\Support\Facades\Schema;

use Illuminate\Database\Schema\Blueprint;
use Illuminate\Database\Migrations\Migration;
//Generated By PlantUML Command
class CreateCaretaker_animals extends Migration{
	public function up(){
 		Schema::create('caretaker_animals', function (Blueprint $table) {
			$table->bigIncrements('id');
			$table->integer('caretaker_id');
			$table->integer('animal_id');
			$table->timestamps();

            $table->foreign('caretaker_id')->references('id')->on('caretakers')->onDelete('cascade');
            $table->foreign('animal_id')->references('id')->on('animals')->onDelete('cascade');

		});
 	}
	public function down(){

	}
}
