<?php 
use Illuminate\Support\Facades\Schema;

use Illuminate\Database\Schema\Blueprint;
use Illuminate\Database\Migrations\Migration;
//Generated By PlantUML Command
class CreateCaretakers extends Migration{
	public function up(){ 
 		Schema::create('caretakers', function (Blueprint $table) { 
			$table->bigIncrements('id');
			$table->string('name');
			$table->string('specialty');
			$table->integer('years_of_experience');
			$table->string('contact_number');
			$table->timestamps();
		});
 	} 
	public function down(){
 
	} 
}