<?php 
use Illuminate\Support\Facades\Schema;

use Illuminate\Database\Schema\Blueprint;
use Illuminate\Database\Migrations\Migration;
//Generated By PlantUML Command
class CreateEnclosures extends Migration{
	public function up(){ 
 		Schema::create('enclosures', function (Blueprint $table) { 
			$table->bigIncrements('id');
			$table->integer('capacity');
			$table->string('location');
			$table->string('type');
			$table->timestamps();
		});
 	} 
	public function down(){
 
	} 
}